--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "trilateration-coordfinder"
 version = "1.0.0"
 authors = [
-    { name = "LOKAI7", email = "your.email@example.com" }
+    { name = "LOKAI7", email = "klima.luki@gmail.com" }
 ]
 description = "High-precision geospatial trilateration solver using multiple optimization methods"
 readme = "README.md"
